# wccm-eccomas-hbm-nn

./: CITATION.cff  README.md  pyproject.toml
data/: EB1to3_cond_Om_force80_kt10000000_muN106.csv  EB1to3_reference_results_force105_kt10000000_muN106.csv  EB1to3_reference_results_force45_kt10000000_muN106.csv  EB1to3_reference_results_force45_kt10000000_muN53.csv  EB1to3_reference_results_force45_kt3500000_muN106.csv  EB1to3_reference_results_force75_kt10000000_muN106.csv  EB1to3_testing_results_force45_kt10000000_muN106.csv  EB1to3_testing_results_force45_kt10000000_muN53.csv  EB1to3_testing_results_force45_kt3500000_muN106.csv  EB1to3_testing_results_force45_kt5000000_muN106.csv  EB1to3_testing_results_force75_kt10000000_muN106.csv  EB1to3_testing_results_force80_kt10000000_muN106.csv  aft_results_force45_kt10000000_muN106.csv  aft_results_force45_kt10000000_muN53.csv  aft_results_force45_kt10000000_muN530.csv  aft_results_force45_kt5000000_muN106.csv  aft_results_force75_kt10000000_muN106.csv  aft_results_force80_kt10000000_muN106.csv  frc_inputs_force80_kt10000000_muN106.csv  inputs_frc.txt  nn_results_force105_kt10000000_muN106.csv  nn_results_force45_kt10000000_muN106.csv  nn_results_force45_kt10000000_muN53.csv  nn_results_force45_kt10000000_muN530.csv  nn_results_force45_kt3500000_muN106.csv  nn_results_force45_kt5000000_muN106.csv  nn_results_force75_kt10000000_muN106.csv  nn_results_force80_kt10000000_muN106.csv  test_data_H3_2026-07-17_22-04-58.npz  test_data_H3_2026-07-17_22-12-15.npz  test_data_H3_2026-07-18_01-44-36.npz  train_data_H3_2026-07-17_22-04-58.npz  (+5 more)
(+31 files in other folders)
