[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wccm-eccomas-hbm-nn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "joblib",
    "torch",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
